--- a/BankStore/BankStore.csproj
+++ b/BankStore/BankStore.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="MapConfig\" />
+    <Folder Include="Controllers\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
