--- a/BankStore/appsettings.json
+++ b/BankStore/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "MongoDbCongiguration": {
+        "ConnectionString": {
+            "MongoDB": "mongodb+srv://Bank:Banka1@cluster0.mongodb.net/Banka1?retryWrites=true&w=majority"
+
+        }
     }
-  },
-  "AllowedHosts": "*"
-}
+{
