--- a/BankStore/appsettings.json
+++ b/BankStore/appsettings.json
@@ -7,9 +7,9 @@
     },
     "AllowedHosts": "*",
     "MongoDbCongiguration": {
-        "ConnectionString": {
-            "MongoDB": "mongodb+srv://Bank:Banka1@cluster0.mongodb.net/Banka1?retryWrites=true&w=majority"
+        "MongoBanka": "mongodb+srv://Bank:Banka1@cluster0.mongodb.net/Banka1?retryWrites=true&w=majority",
+        "DatabaseName": "Banka1"
 
-        }
+
     }
-{
+}
